--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="ru">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Кваст</title>
   <link rel="stylesheet" href="./kvas_files/style.css">
 </head>
@@ -11,21 +12,21 @@
   <header class="index-header">
     <div class="container">
       <nav class="main-navigation">
-        <a href="#" class="main-header-logo">
+        <a href="index.html" class="main-header-logo">
           <img alt="Кваст" src="./kvas_files/logo.png" widht="140" height="76">
         </a>
         <ul class="site-navigation">
           <li class="site-navigation-item">
-            <a href="#">История</a>
+            <a href="#history">История</a>
           </li>
           <li class="site-navigation-item">
-            <a href="#">Производство</a>
+            <a href="#production">Производство</a>
           </li>           
           <li class="site-navigation-item">
-            <a href="#">Ассортимент</a>
+            <a href="#range">Ассортимент</a>
           </li>
           <li class="site-navigation-item">
-            <a href="#">Где купить</a>
+            <a href="#order">Где купить</a>
           </li>
         </ul>
       </nav>
@@ -105,6 +106,7 @@
 
 
   <section class="advantages">
+    <a name="production"></a>
     <div class="container2">
         <ul class="advantage-list">
           <li class="advantage-item first">
@@ -125,6 +127,7 @@
 
 
   <section class="history">
+    <a name="history"></a>
     <div class="container">
       <h2>Немного истории</h2>
       <dl>
@@ -161,7 +164,8 @@
     </blockquote>
   </section>
 
-  <section class="assortment">
+  <section class="range">
+    <a name="range"></a>
     <div class="container">
       <h2>Ассортимент</h2>
       <table>
@@ -208,6 +212,7 @@
 
 
   <section class="order">
+    <a name="order"></a>
     <div class="container">
       <h2>Заказать</h2>
       <p class="order-type">Не ждите пока нас отрекламируют, как Вятский квас, и мы поднимем цены! Закажите настоящий крафтовый квас сейчас.<br>При заказе от 10 баррелей — скидка 10%.</p>
@@ -274,10 +279,10 @@
           <img src="./kvas_files/logo.png" alt="Кваст">
         </div>
         <ul>
-          <li><a href="#">История</a></li>
-          <li><a href="#">Производство</a></li>
-          <li><a href="#">Ассортимент</a></li>
-          <li><a href="#">Где купить</a></li>
+          <li><a href="#history">История</a></li>
+          <li><a href="#production">Производство</a></li>
+          <li><a href="#range">Ассортимент</a></li>
+          <li><a href="#order">Где купить</a></li>
         </ul>
       </nav>
     </div>
@@ -293,7 +298,7 @@
           <img src="./kvas_files/htmlacademy.png" alt="htmlacademy">
         </div>
         <div class="developer-description">
-          <strong>Разработчик: </strong><a href="#">HTML Academy</a>
+          <strong>Разработчик: </strong><a href="https://htmlacademy.ru/">HTML Academy</a>
         </div>
       </div>
     </div>
