--- a/index.html
+++ b/index.html
@@ -16,18 +16,10 @@
           <img alt="Кваст" src="./kvas_files/logo.png" widht="140" height="76">
         </a>
         <ul class="site-navigation">
-          <li class="site-navigation-item">
-            <a href="#history">История</a>
-          </li>
-          <li class="site-navigation-item">
-            <a href="#production">Производство</a>
-          </li>           
-          <li class="site-navigation-item">
-            <a href="#range">Ассортимент</a>
-          </li>
-          <li class="site-navigation-item">
-            <a href="#order">Где купить</a>
-          </li>
+          <li class="site-navigation-item"><a href="#history">История</a></li>
+          <li class="site-navigation-item"><a href="#production">Производство</a></li>           
+          <li class="site-navigation-item"><a href="#range">Ассортимент</a></li>
+          <li class="site-navigation-item"><a href="#order">Где купить</a></li>
         </ul>
       </nav>
       <p class="tag">Крафтовый квас<br>всему голова!</p>
